syntax = "proto3";
package kubeappsapis.plugins.resources.v1alpha1;
option go_package = "github.com/kubeapps/kubeapps/cmd/kubeapps-apis/gen/plugins/resources/v1alpha1";

import "kubeappsapis/core/packages/v1alpha1/packages.proto";

import "google/api/annotations.proto";
import "google/protobuf/any.proto";

service ResourcesService {
    rpc GetResources(GetResourcesRequest) returns (stream GetResourcesResponse) {
        option (google.api.http) = {
            // Need to see if the resource refs can be sent in the queryparam, when
            // it's a repeated field?
            get: "/plugins/resources/v1alpha1/{installed_package_ref.plugin.name}/{installed_package_ref.plugin.version}/c/{installed_package_ref.context.cluster}/ns/{installed_package_ref.context.namespace}/{installed_package_ref.identifier}"
        };
    }
}

// GetResources can call GetResourceRefs explicitly and ensure that the requested resources
// are a subset of those published for the package.
message GetResourcesRequest {
    kubeappsapis.core.packages.v1alpha1.InstalledPackageReference installed_package_ref = 1;

    repeated kubeappsapis.core.packages.v1alpha1.ResourceRef resource_refs = 2;

    bool watch = 3;
}

message GetResourcesResponse {
    kubeappsapis.core.packages.v1alpha1.ResourceRef resource_ref = 1;

    google.protobuf.Any manifest = 2;
}
